--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
   align-items: center;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 /* heaeder left */
 .headerleft {
@@ -85,6 +86,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 .container h2 {
   height: 280px;
@@ -93,45 +95,69 @@
   color: white;
   font-weight: 700;
   font-size: 3.3rem;
+  max-width: 600px;
 }
 .container-right {
   width: 522px;
   height: 520px;
-  background-color: aqua;
+  background-color: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
   border-radius: 12px;
 }
 .service-head {
   color: white;
   font-weight: 600;
   background-color: rgb(97, 97, 97);
-  width: 482px;
+  width: 498px;
   height: 46px;
   border-radius: 12px;
   margin: auto;
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 7px solid #f4f4f4;
+  border: 7px solid rgb(233, 216, 226);
   margin-top: 5px;
 }
-.services {
+.container-bot {
+  display: flex;
+  background-color: rgb(233, 216, 226);
+  width: 498px;
+  border-radius: 12px;
+  justify-content: center;
+  height: 430px;
+  margin: auto;
+  margin-top: 20px;
+  gap: 50px;
+}
+.services,
+.services2 {
   display: flex;
   flex-direction: column;
-  gap: 30px;
-  margin-top: 20px;
-  margin-left: 20px;
+  gap: 40px;
+  justify-content: center;
+  align-items: center;
 }
 .service {
   border-radius: 12px;
-  background-color: yellow;
-  width: 40%;
   flex-direction: column;
   gap: 20px;
   justify-content: center;
   align-items: center;
   display: flex;
-  height: 128px;
+  width: 199px;
+  height: 110px;
+  transition: 0.5s;
 }
+.service:hover {
+  background-color: white;
+  .service-name {
+    transform: translateX(-10px);
+  }
+  .names i {
+    opacity: 1;
+  }
+}
+
 .service-svg {
   width: 60px;
   height: 60px;
@@ -147,6 +173,167 @@
   width: 30px;
   height: 30px;
 }
-.services-name {
+.names {
+  display: flex;
+}
+.names i {
+  opacity: 0;
+  transition: 0.5s;
+  margin-top: 2px;
+  margin-left: -2px;
+}
+.service-name {
+  font-weight: 600;
+  transition: 0.5s;
+}
+/* sliders */
+.sliders {
+  margin-top: 30px;
+  border-radius: 12px;
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 1) 0%,
+      rgba(0, 0, 0, 0.6587009803921569) 0%
+    ),
+    url(https://osa.mobicom.mn/content/mcommerce/uploads/specialOfferBG.png);
+  width: 100%;
+  height: 566px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.slider-name {
+  color: white;
+  margin: auto;
+  font-size: 3.3rem;
+  font-weight: 800;
+  width: 700px;
+  height: 60px;
+}
+.menus {
+  height: 58px;
+  display: flex;
+  gap: 20px;
+  width: 778px;
+  height: 58px;
+  margin: auto;
+  margin-top: 50px;
+}
+.detail {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-weight: 500;
+  font-size: 18px;
+  cursor: pointer;
+}
+.menus svg {
+  width: 15px;
+  height: 15px;
+  margin-top: 23px;
+  margin-left: -20px;
+  fill: white;
+}
+.menu {
+  color: rgb(214, 210, 210);
+  font-weight: 500;
+  font-size: 18px;
+  display: flex;
+  gap: 35px;
+  background-color: gray;
+  border: 1px solid rgb(151, 149, 149);
+  width: 643px;
+  height: 58px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 12px;
+  cursor: pointer;
+}
+
+.menu1 {
+  background-color: white;
+  width: 70px;
+  height: 40px;
+  border-radius: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  flex-wrap: wrap;
+}
+/* slider */
+.slider {
+  display: flex;
+  gap: 20px;
+  margin-top: 30px;
+}
+.slider img {
+  width: 100%;
+}
+.slider5,
+.slider1,
+.slider2,
+.slider3,
+.slider4 {
+  border-radius: 12px;
+  overflow: hidden;
+  width: 345px;
+  height: 509px;
+}
+.slider5 {
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.6237088585434174) 0%,
+      rgba(0, 0, 0, 0.20073967086834732) 100%
+    ),
+    url(https://osa.mobicom.mn/content/mcommerce/uploads/mobicom_medee_1_1_be49b51926.webp);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.slider1 {
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.6237088585434174) 0%,
+      rgba(0, 0, 0, 0.20073967086834732) 100%
+    ),
+    url(https://osa.mobicom.mn/content/mcommerce/uploads/1080_720_904f6b1f30.webp);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.slider2 {
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.6237088585434174) 0%,
+      rgba(0, 0, 0, 0.20073967086834732) 100%
+    ),
+    url(https://osa.mobicom.mn/content/mcommerce/uploads/Special_Olympics_medee_721x1081_143e09ad6c.webp);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.slider3 {
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.6237088585434174) 0%,
+      rgba(0, 0, 0, 0.20073967086834732) 100%
+    ),
+    url(https://osa.mobicom.mn/content/mcommerce/uploads/5_G_1_1f3208070f.webp);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.slider4 {
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.6237088585434174) 0%,
+      rgba(0, 0, 0, 0.20073967086834732) 100%
+    ),
+    url(https://osa.mobicom.mn/content/mcommerce/uploads/1080_720_904f6b1f30.webp);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
