--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@
   width: 100%;
 }
 .search input {
+  padding-left: 60px;
   border: none;
   width: 200px;
   height: 35px;
@@ -74,7 +75,6 @@
     ),
     url(https://osa.mobicom.mn/content/mcommerce/uploads/DJI_20231028181037_0240_D_MAX_Recovered_ezgif_com_jpg_to_webp_converter_d02db53f44.webp);
   width: 100%;
-  height: 800px;
   background-position: center;
   margin-top: 20px;
   border-radius: 12px;
@@ -201,6 +201,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  padding-top: 100px;
 }
 
 .slider-name {
@@ -219,6 +220,7 @@
   height: 58px;
   margin: auto;
   margin-top: 50px;
+  flex-wrap: wrap;
 }
 .detail {
   color: white;
@@ -250,6 +252,7 @@
   align-items: center;
   border-radius: 12px;
   cursor: pointer;
+  flex-wrap: wrap;
 }
 
 .menu1 {
@@ -267,7 +270,10 @@
 .slider {
   display: flex;
   gap: 20px;
+  width: 85%;
+  margin: auto;
   margin-top: 30px;
+  flex-wrap: wrap;
 }
 .slider img {
   width: 100%;
@@ -336,4 +342,86 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+.sliders h3 {
+  color: white;
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+.slider1,
+.slider2,
+.slider3,
+.slider4,
+.slider5 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: end;
+}
+.slider-top {
+  width: 40px;
+  height: 40px;
+  background-color: rgb(54, 53, 53);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15px;
+  margin-right: 15px;
+}
+.slider-bot {
+  display: flex;
+  flex-direction: column;
+  max-width: 300px;
+  margin-right: 20px;
+}
+.slider-top svg {
+  fill: yellow;
+  width: 20px;
+  height: 20px;
+}
+.sliderline {
+  width: 300px;
+  height: 2px;
+  background-color: gray;
+  margin-bottom: 50px;
+}
+/* shop */
+.shop {
+  margin-top: 300px;
+  border-radius: 12px;
+  height: 1003px;
+  background-color: #f4f4f4;
+  box-shadow: 0px 0px 48px -18px black;
+}
+.shop-header h2 {
+  font-weight: 700;
+  font-size: 3.3rem;
+}
+.shop-button {
+  display: flex;
+  gap: 20px;
+  width: 437px;
+  height: 58px;
+}
+.button-left {
+  display: flex;
+  gap: 20px;
+  width: 296px;
+  height: 58px;
+  background-color: rgb(195, 193, 193);
+  border-radius: 12px;
+  justify-content: center;
+  align-items: center;
+}
+.button-left :nth-child(1) {
+  width: 93px;
+  height: 40px;
+  background-color: black;
+  color: white;
+  border-radius: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
